# flox

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
flox/: __init__.py  cli.py  click.py  command.py  plugin.py
flox/config/: __init__.py  command.py  parameters.py  remotes.py  secrets.py
flox/core/: __init__.py  config.py  container.py  exceptions.py  utils.py
flox/info/: command.py
flox/plugins/: command.py  manager.py
flox/profile/: click.py  command.py  profiles.py  sources.py
flox/project/: apply.py  click.py  command.py  create.py  workflow.py
flox/utils/: diff.py
profiles/: aws-serverless-python.yml
