[tool.poetry]
name = "flox"
version = "0.1.0"
homepage = "https://github.com/getflox/flox"
description = "Highly opinionated workflow and orchestration toolkit for modern microservice development"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^7.1"
click-plugins = "^1.1.1"
click-shell = "^2.0"
gitpython = "^3.1.0"
pygments = "^2.5"
humanfriendly = "^10.0"
pyyaml = "^6.0"
schema = "^0.7"
deepmerge = "^0.3.0"
colorama = "^0.4"
dictdiffer = "^0.9"
keyring = "^23.4"
plumbum = "^1.6"
requests = "^2.23.0"
terminaltables = "^3.1.0"
anyconfig = "^0.10"
flox-core = { git = "ssh://git@github.com/getflox/flox-core" }
#flox-core = {path = "../flox-core"}
#flox-sentry = {path = "../flox-sentry"}
#flox-aws = {path = "../flox-aws"}
#flox-exec = {path = "../flox-exec"}
#flox-git = {path = "../flox-git"}
#flox-github = {path = "../flox-github"}
#flox-workflow = {path = "../flox-workflow"}
#flox-docker = {path = "../flox-docker"}
#flox-jira = {path = "../flox-jira"}
#flox-rules = {path = "../flox-rules"}
#flox-bamboo = {path = "../flox-bamboo"}

slugify = "^0.0.1"
[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10"

[tool.poetry.scripts]
flox = 'flox.cli:cli'

[tool.poetry.plugins."flox.plugin"]
global = "flox:plugin"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
