[tool.poetry]
name = "flox-cli"
version = "0.5.2"
homepage = "https://github.com/getflox/flox"
description = "Highly opinionated workflow and orchestration toolkit for modern microservice development"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "flox" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
click-plugins = "^1.1.1"
flox-github = {path = "../flox-github", develop = true}
flox-core = {path = "../flox-core", develop = true}
flox-sentry = {path = "../flox-sentry", develop = true}


[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.12.0"

[tool.poetry.extras]
aws = ["flox-aws"]
bootstrap = ["flox-bootstrap"]
git = ["flox-git"]
github = ["flox-github"]
sentry = ["flox-sentry"]


[tool.poetry.scripts]
flox = 'flox.cli:cli'

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
